# zsl-quotes

./: .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  quote.rs
migration/src/: m20220101_000001_create_table.rs
src/: config.rs  main.rs
