[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
serde = { version = "1.0.136", features = ["derive"] }
sea-orm = { version = "0.7.1", default-features = false, features = ["sqlx-mysql", "macros", "with-chrono", "runtime-actix-native-tls", "debug-print"] }
